Added header functionality and styles

--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" type="text/css" href="dist/main.css">
-   <link rel="Website icon" type="png" href="./../images/header/logo.png">
+   <link rel="Website icon" type="png" href="./../img/header/logo.png">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
    <title>Максим Сытов</title>
 </head>
 <body>
    <div class="wrapper">
-      <header class="header__page page">
+      <header class="header__page page animated__page">
          <div class="header__container container">
             <div class="header__body body">
                <div class="header__logo">
                   <a href="#" class="header__logo-link">
-                     <img src="./images/header/logo.png" alt="Logo" class="header__logo-img">
+                     <img src="./img/header/logo.png" alt="Logo" class="header__logo-img">
                   </a>
+               </div>
+               <nav class="header__nav">
+                  <ul class="header__list">
+                  </ul>
+               </nav>
+               <div class="menu__icon">
+                  <span></span>
                </div>
             </div>
          </div>
