--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +7,12 @@
    <link rel="Website icon" type="png" href="./../img/header/logo.png">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
-   <title>Максим Сытов</title>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet">
+   <title>Maxim Sytov</title>
 </head>
 <body>
    <div class="wrapper">
-      <header class="header__page page animated__page">
+      <header class="header__page page">
          <div class="header__container container">
             <div class="header__body body">
                <div class="header__logo">
@@ -30,6 +30,58 @@
             </div>
          </div>
       </header>
+      <main class="main">
+         <section class="main-screen__page page">
+            <div class="main-screen__container container">
+               <div class="main-screen__body body">
+                  <div class="main-screen__content">
+                     <div class="main-screen__content-title">
+                        <h1 class="main-screen__title">
+                           I'M <span>Maxim Sytov</span> 
+                        </h1>
+                     </div>
+                     <div class="main-screen__content-subtitle">
+                        <p class="main-screen__subtitle">
+                           Frontend-developer <br> I strive to create amazing user interfaces, bringing creative ideas to web applications with ease
+                        </p>
+                     </div>
+                     <button class="main-screen__button">
+                        <a href="#" class="main-screen__button-link">
+                           Contact Me
+                        </a>
+                     </button>
+                  </div>
+                  <div class="main-screen__image">
+                     <img src="./img/about/me.png" alt="Me" class="main-screen__image-img">
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section class="about__page page animated__page">
+            <div class="about__container container">
+               <div class="about__body body">
+                  <div class="about__content">
+                     <div class="about__content-title">
+                        <h2 class="about__title">
+                           About
+                        </h2>
+                     </div>
+                     <div class="about__content-subtitle">
+                        <p class="about__subtitle">
+                           I am a <span> frontend developer </span>, my main area of interest is the layout of one-page websites and online stores, setting up contact feedback forms and creating animations. I am constantly striving to develop in the field of frontend development and creating React applications.
+                        </p>
+                        <p class="about__subtitle">
+                           I successfully completed courses from SkillFactory, HTML-academy and GeekBrains, where I learned the basics of layout and web development, working with the Git version control system, as well as the basic principles of object-oriented programming. In my work I <span>adhere to the BEM methodology and OOP principles</span>.
+                        </p>
+                        <p class="about__subtitle">
+                           I am ready to continue to develop my skills in the field of frontend development and contribute to your team and project. <span> Communication skills, responsibility and the desire for self-development </span> are my qualities that will help me work successfully in a team environment. I will be happy to take on new challenges and help you achieve your goals using the technologies of our stack.
+                        </p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+      </main>
    </div>
 </body>
 </html>
