Added blocks stack

--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
                </div>
             </div>
          </section>
+         <section class="stack__page page animated__page">
+            <div class="stack__container container">
+               <div class="stack__body body">
+                  <div class="stack__content">
+                     <div class="stack__content-title">
+                        <h2 class="stack__title">
+                           My Skills
+                        </h2>
+                     </div>
+                     <div class="stack__cards">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
    </div>
 </body>
