adding a portfolio block

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                <div class="about__body body">
                   <div class="about__content">
                      <div class="about__content-title">
-                        <h2 class="about__title">
+                        <h2 class="about__title title">
                            About
                         </h2>
                      </div>
@@ -84,13 +84,33 @@
          <section class="stack__page page animated__page">
             <div class="stack__container container">
                <div class="stack__body body">
-                  <div class="stack__content">
-                     <div class="stack__content-title">
-                        <h2 class="stack__title">
+                  <div class="stack__content content">
+                     <div class="stack__content-title center">
+                        <h2 class="stack__title title">
                            My Skills
                         </h2>
                      </div>
                      <div class="stack__cards">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section class="portfolio__page page">
+            <div class="portfolio__container container">
+               <div class="portfolio__body body">
+                  <div class="portfolio__content content">
+                     <div class="portfolio__content-title center">
+                        <h2 class="portfolio__title title">
+                           Portfolio
+                        </h2>
+                     </div>
+                     <div class="portfolio__content-cards">
+                     </div>
+                     <div class="portfolio__content-button">
+                        <button class="portfolio__content-btn">
+                           View More
+                        </button>   
                      </div>
                   </div>
                </div>
