adding a block of experience and contacts

--- a/index.html
+++ b/index.html
@@ -108,9 +108,96 @@
                      <div class="portfolio__content-cards">
                      </div>
                      <div class="portfolio__content-button">
-                        <button class="portfolio__content-btn">
+                        <button class="portfolio__content-btn" id="showMoreButton">
                            View More
                         </button>   
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section class="experience__page page">
+            <div class="experience__container container">
+               <div class="experience__body body">
+                  <div class="experience__content content">
+                     <div class="experience__content-title title">
+                        <h2 class="experience__title">
+                           Experience
+                        </h2>
+                     </div>
+                     <div class="experience__description">
+                        <div class="description__year">
+                           <p class="description__year-subtitle">
+                              2022
+                           </p>
+                        </div>
+                        <div class="description__decor">
+                           <span class="circle"></span>
+                           <span class="line"></span>
+                        </div>
+                        <div class="description__content">
+                           <div class="description__content-title">
+                              <h3 class="description__title">
+                                 Frontent-developer
+                              </h3>
+                           </div>
+                           <div class="description__content-subtitle">
+                              <h3 class="description__subtitle">
+                                 Fl.ru
+                              </h3>
+                           </div>
+                           <div class="description__content-paragraph">
+                              <p class="description__paragraph">
+                                 1. Responsive and Cross-Browser Website Development: Experience in creating web pages that look and perform great on different devices and browsers using HTML5, CSS3 and media queries.
+                              </p>
+                              <p class="description__paragraph">
+                                 2. Setting up functionality: experience in setting up and adding interactive website elements such as buttons, sliders, forms, galleries and others. I can use JavaScript and libraries such as jQuery and Swiper to create dynamic and attractive user interfaces.
+                              </p>
+                              <p class="description__paragraph">
+                                 3. React Component Development: Experience in building fluid and scalable components in React using modern practices and methodologies such as functional components, hooks and context.
+                              </p>
+                              <p class="description__paragraph">
+                                 4. Layout of e-mail newsletters and landing pages: experience in creating effective and attractive e-mail newsletters and landing pages, taking into account restrictions and additional requirements, for example, extensibility, compatibility with various email clients and achieving high performance.
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section class="contact__page page">
+            <div class="contact__container ">
+               <div class="contact__body body">
+                  <div class="contact__body-title title">
+                     <span></span>
+                     <h2 class="contact__title">
+                        Contact Me
+                     </h2>
+                     <span></span>
+                  </div> 
+                  <div class="contact__content content">  
+                     <div class="contact__content-cards">
+                        <div class="contact__card">
+                           <div class="contact__card-images">
+                              <img src="./img/contact/1904660-email-envelope-letter-mail-message-post-send_122510.svg" alt="" class="contact__card-img">
+                           </div>
+                           <div class="contact__card-title">
+                              <a href="" class="contact__card-title-link">
+                                 macsim.sytov@yandex.ru
+                              </a>
+                           </div>
+                        </div>
+                        <div class="contact__card">
+                           <div class="contact__card-images">
+                              <img src="./img/contact/2849835-call-cell-communication-interface-multimedia-phone-telephone_108000.svg" alt="" class="contact__card-img">
+                           </div>
+                           <div class="contact__card-title">
+                              <a href="" class="contact__card-title-link">
+                                 8(900) 558-46-90
+                              </a>
+                           </div>
+                        </div>
                      </div>
                   </div>
                </div>
