--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <div class="header__container container">
             <div class="header__body body">
                <div class="header__logo">
-                  <a href="#" class="header__logo-link">
+                  <a href="#main-screen__page" class="header__logo-link">
                      <img src="./img/header/logo.png" alt="Logo" class="header__logo-img">
                   </a>
                </div>
@@ -31,7 +31,7 @@
          </div>
       </header>
       <main class="main">
-         <section class="main-screen__page page">
+         <section class="main-screen__page page" id="main-screen__page">
             <div class="main-screen__container container">
                <div class="main-screen__body body">
                   <div class="main-screen__content">
@@ -46,7 +46,7 @@
                         </p>
                      </div>
                      <button class="main-screen__button">
-                        <a href="#" class="main-screen__button-link">
+                        <a href="#contact__page" class="main-screen__button-link">
                            Contact Me
                         </a>
                      </button>
@@ -57,7 +57,7 @@
                </div>
             </div>
          </section>
-         <section class="about__page page animated__page">
+         <section class="about__page page animated__page" id="about__page">
             <div class="about__container container">
                <div class="about__body body">
                   <div class="about__content">
@@ -81,7 +81,7 @@
                </div>
             </div>
          </section>
-         <section class="stack__page page animated__page">
+         <section class="stack__page page animated__page" id="stack__page">
             <div class="stack__container container">
                <div class="stack__body body">
                   <div class="stack__content content">
@@ -96,7 +96,7 @@
                </div>
             </div>
          </section>
-         <section class="portfolio__page page">
+         <section class="portfolio__page page animated__page" id="portfolio__page">
             <div class="portfolio__container container">
                <div class="portfolio__body body">
                   <div class="portfolio__content content">
@@ -116,7 +116,7 @@
                </div>
             </div>
          </section>
-         <section class="experience__page page">
+         <section class="experience__page page animated__page" id="experience__page">
             <div class="experience__container container">
                <div class="experience__body body">
                   <div class="experience__content content">
@@ -166,40 +166,56 @@
                </div>
             </div>
          </section>
-         <section class="contact__page page">
+         <section class="contact__page page animated__page" id="contact__page">
             <div class="contact__container ">
                <div class="contact__body body">
                   <div class="contact__body-title title">
-                     <span></span>
+                     <span class="left-line"></span>
                      <h2 class="contact__title">
                         Contact Me
                      </h2>
-                     <span></span>
+                     <span class="right-line"></span>
                   </div> 
                   <div class="contact__content content">  
                      <div class="contact__content-cards">
                         <div class="contact__card">
                            <div class="contact__card-images">
-                              <img src="./img/contact/1904660-email-envelope-letter-mail-message-post-send_122510.svg" alt="" class="contact__card-img">
+                              <img src="./img/contact/email.svg" alt="" class="contact__card-img">
                            </div>
                            <div class="contact__card-title">
-                              <a href="" class="contact__card-title-link">
+                              <a href="mailto:macsim.sytov@yandex.ru" class="contact__card-title-link" target="_blank">
                                  macsim.sytov@yandex.ru
                               </a>
                            </div>
                         </div>
                         <div class="contact__card">
                            <div class="contact__card-images">
-                              <img src="./img/contact/2849835-call-cell-communication-interface-multimedia-phone-telephone_108000.svg" alt="" class="contact__card-img">
+                              <img src="./img/contact/tell.svg" alt="" class="contact__card-img">
                            </div>
                            <div class="contact__card-title">
-                              <a href="" class="contact__card-title-link">
+                              <a href="tel:+79005584690" class="contact__card-title-link">
                                  8(900) 558-46-90
                               </a>
                            </div>
                         </div>
                      </div>
                   </div>
+                  <div class="contact__body-social ">
+                     <span class="left-line"></span>
+                     <ul class="contact__socil-list">
+                        <li class="contact__social-paragraph">
+                           <a href="https://github.com/Jeteno" class="contact__social-link" target="_blank">
+                              <img src="./img/contact/github.svg" alt="GitHub" class="contact__social-img">
+                           </a>
+                        </li>
+                        <li class="contact__social-paragraph">
+                           <a href="https://t.me/Maksim_Sytov" class="contact__social-link" target="_blank">
+                              <img src="./img/contact/telegram.svg" alt="Telegram" class="contact__social-img">
+                           </a>
+                        </li>
+                     </ul>
+                     <span class="right-line"></span>
+                  </div> 
                </div>
             </div>
          </section>
